--- a/index.html
+++ b/index.html
@@ -848,6 +848,6 @@
     <script src="js/main.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
     <script src="js/bootstrap.bundle.min.js.map"></script>
-    
+    <script src="js/boot"></script>
 </body>
 </html>
